tests/fixtures/errors/division_by_zero.lazy
// error: Unexpected character
//   --> tests/fixtures/errors/division_by_zero.lazy:11:13
//    |
// 11 | result = 10 / 0
//    |             ^
//
// Found an unexpected character in the source code.
//
// help: Remove the invalid character or check for typos.

result = 10 / 0
result
